--- a/package.json
+++ b/package.json
@@ -13,26 +13,27 @@
     "@lucia-auth/adapter-prisma": "4.0.1",
     "@node-rs/argon2": "^2.0.2",
     "@prisma/client": "^6.2.1",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
-    "@types/ws": "^8.5.14",
+    "@radix-ui/react-toast": "^1.2.5",
     "arctic": "^3.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "http": "^0.0.1-security",
     "lucia": "^3.2.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
-    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "socket.io": "^4.8.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "ws": "^8.18.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
