--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@lucia-auth/adapter-prisma": "4.0.1",
     "@node-rs/argon2": "^2.0.2",
     "@prisma/client": "^6.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
     "arctic": "^3.2.1",
