--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "arctic": "^3.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucia": "^3.2.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
