--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "@tanstack/react-query": "^5.28.4",
     "socket.io": "^4.8.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
