--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@node-rs/argon2": "^2.0.2",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.5",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.1",
@@ -24,6 +25,7 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
+    "@tanstack/react-query": "^5.28.4",
     "@types/ws": "^8.5.14",
     "arctic": "^3.2.1",
     "class-variance-authority": "^0.7.1",
@@ -38,7 +40,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "@tanstack/react-query": "^5.28.4",
     "socket.io": "^4.8.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
